# soap-rs

./: .deepsource.toml  .replit  Cargo.toml  LICENSE  README.md  replit.nix
.github/workflows/: docs.yml  rust.yml
src/: lib.rs
src/wsdl/: error.rs  mod.rs
test-data/: wsdl_sample_1.xml  wsdl_sample_2.xml
tests/: wsdl_basic.rs
