[package]
name = "soap-rs"
version = "0.0.1"
edition = "2021"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not this crate:
[profile.dev.package."*"]
opt-level = 3
